tests/fixtures/invalid/set_bool.py
# Cannot call set() with Bool
x = set(True)
